Fix scrollbar and back to original colors

--- a/slt/src/app/pages/login/login.scss
+++ b/slt/src/app/pages/login/login.scss
@@ -77,7 +77,8 @@ $menuHeight: 150px;
 
 .content {
   @media(min-width: $lg) {
-    top: 50px;
+    top: 0;
+    padding-top: 150px;
     left: $menuWidth;
   }
   position: fixed;
